# CEX2DEX

./: CMakeLists.txt  LICENSE  README.md  build.sh  cmep_comm_types.h
CEX2DEX-Installer/: CMakeLists.txt  config_attributes.txt  config_capability.txt  exports.yml
CEX2DEX-Installer/src/: graphics.c  graphics.h  main.c  screen_clear.S
CEX2DEX-Kernel/: CMakeLists.txt  config_attributes.txt  config_capability.txt  exports.yml
CEX2DEX-Kernel/src/: console_id.c  console_id.h  idstorage.c  idstorage.h  main.c  sce_self_info.h  taihen_macro.h
CEX2DEX-Vpk/: CMakeLists.txt
payload/: CMakeLists.txt  linker.x  main.c  types.h
